fixed header and hero image overlap by removing positioning

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -15,13 +15,12 @@ li {
 }
 
 .header{
-  padding-bottom: 4.5rem;
+
 }
 
 .navbar {
   overflow: hidden;
   background-color: #8893b5e5;
-  position: absolute;
   height: fit-content;
   width: 100%;
   // min-height: 5rem;
